--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
       
       <header>
       <div class="top-img">
-        <img src="https://github.com/SZureti/Preprocessing-II/blob/master/img/fun-bus.jpg?raw=true" aref="Yellow school bus on the beach">
-        <h2>Welcome To The Fun Bus</h2>
+        <img src="https://github.com/SZureti/Preprocessing-II/blob/master/img/fun-bus.jpg?raw=true" aref="The Fun Bus on the beach">
+        <h2 class="welcome">Welcome To The Fun Bus!</h2>
         <p> 
           Traveling expedition modern, clean webdesign blogger clean website theme modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.
         </p>
-
     </div>
 
 
@@ -101,10 +100,10 @@
       </div>
     </section>
   </div><!-- container -->
-
+</div>
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
-  </div>
+  
 </body>
 </html>
